# encrypted-computing-sdk

./: .clang-format  .gitignore  .pre-commit-config.yaml  .typos.toml  CONTRIBUTING.md  CPPLINT.cfg  Doxyfile  HEADER  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  format.yml  hec-asm-test.yml  kerngen-test.yml
assembler_tools/hec-assembler-tools/: README.md  he_as.py  he_link.py  he_prep.py  pytest.ini  requirements.txt
assembler_tools/hec-assembler-tools/config/: isa_spec.json  mem_spec.json
assembler_tools/hec-assembler-tools/debug_tools/: README.md  deadlock_test.py  isolation_test.py  main.py  order_test.py
docs/: Doxyfile
docs/doxygen/html/: add_8h.html  (+2479 more)
kerngen/: kerngraph.py
p-isa_tools/: CMakeLists.txt  README.md
p-isa_tools/cmake/: dependencies.cmake
p-isa_tools/common/: config.h.in  string.h
p-isa_tools/data_formats/: CMakeLists.txt  README.md
p-isa_tools/data_formats/cmake/: HERACLES_DATA_FORMATSConfig.cmake.in  protobuf-generate.cmake  utils.cmake
p-isa_tools/data_formats/cpp/: .clang-format
p-isa_tools/data_formats/cpp/heracles/data/: io.cpp  math.cpp  transform.cpp
p-isa_tools/data_formats/cpp/heracles/fhe_trace/: io.cpp
p-isa_tools/data_formats/cpp/include/heracles/: heracles_data_formats.h
p-isa_tools/data_formats/cpp/include/heracles/data/: io.h  math.h  transform.h
p-isa_tools/data_formats/cpp/include/heracles/util/: util.h
p-isa_tools/data_formats/openfhe_tracer/: CMakeLists.txt  heraclestracer.h  simple_tracing.cpp
p-isa_tools/data_formats/proto/: .clang-format  CMakeLists.txt  heracles_proto.h.in
p-isa_tools/data_formats/proto/heracles/: common.proto  data.proto  fhe_trace.proto  maps.proto
p-isa_tools/data_formats/python/heracles/: .gitignore
p-isa_tools/data_formats/python/heracles/data/: io.py  naming.py  transform.py
p-isa_tools/data_formats/python/heracles/fhe_trace/: io.py
p-isa_tools/data_formats/python/heracles/util/: data.py  fhe_trace.py
p-isa_tools/data_formats/src/data_formats/cpp/: CMakeLists.txt
p-isa_tools/data_formats/src/data_formats/cpp/heracles/util/: util.cpp
p-isa_tools/data_formats/src/data_formats/cpp/include/heracles/fhe_trace/: io.h
p-isa_tools/data_formats/src/data_formats/proto/heracles/: fhe_trace.proto
p-isa_tools/data_formats/src/data_formats/python/heracles/data/: transform.py
p-isa_tools/data_formats/src/data_formats/test/: heracles_test.cpp  heracles_test.py
p-isa_tools/data_formats/test/: .gitignore  compile_protos.py  generate_test_traces.py  heracles_math_test.cpp  heracles_test.cpp  heracles_test.py
p-isa_tools/data_formats/test/math_unittest/: unittest.cpp  unittest.h
p-isa_tools/data_formats/tracers/openfhe/: CMakeLists.txt  README.md  tracer.h  tracing_example.cpp
p-isa_tools/functional_modeler/: README.md  main.cpp
p-isa_tools/kerngen/: .gitignore  CMakeLists.txt  README.md  kerngen.py  kerngraph.py
p-isa_tools/kerngen/const/: options.py
p-isa_tools/kerngen/high_parser/: __init__.py  config.py  generators.py  options_handler.py  parser.py  pisa_operations.py  types.py
p-isa_tools/kerngen/kernel_optimization/: loop_ordering_lookup.py  loops.py
p-isa_tools/kerngen/kernel_parser/: __init__.py  parser.py
p-isa_tools/kerngen/pisa_generators/: __init__.py  basic.py  decomp.py  mod.py  ntt.py  relin.py  rescale.py  rotate.py  square.py
p-isa_tools/kerngen/tests/: test_kerngen.py  test_kerngen_regression.py  test_kerngraph_command.py  test_kerngraph_parser.py
p-isa_tools/kerngen/tests/kernel_examples/relin_kernel/: input.bgv.16k_l2_m3.relin  input.bgv.16k_l2_m4.relin  output.bgv.16k_l2_m3.relin  output.bgv.16k_l2_m3_p-rns_s-part.relin  output.bgv.16k_l2_m4.relin  output.bgv.16k_l2_m4_p-rns_s-part.relin
p-isa_tools/kerngen/vsc_kerlang_extension/: README.md  language-configuration.json  package.json
p-isa_tools/kerngen/vsc_kerlang_extension/grammars/: kerlang.tmLanguage.json
p-isa_tools/kerngen/vsc_kerlang_extension/themes/: kerlang.tmTheme.json
p-isa_tools/program_mapper/: CMakeLists.txt  README.md  main.cpp  program_mapper.cpp  program_mapper.h  utility_functions.h
p-isa_tools/program_mapper/p_isa/: pisa_graph_optimizer.cpp  pisa_graph_optimizer.h  pisa_test_generator.cpp  pisa_test_generator.h  pisakernel.cpp  pisakernel.h
p-isa_tools/program_mapper/p_isa/tests/: pisa_instruction_tests.h  pisa_kernel_tests.h
p-isa_tools/program_mapper/p_isa/tests/pisa_instruction_tests/: add_instruction_test.h  copy_instruction_test.h  intt_instruction_test.h  mac_instruction_test.h  maci_instruction_test.h  mul_instruction_test.h  muli_instruction_test.h  ntt_instruction_test.h  pisa_instruction_test.h  random_instr_graph_instruction_test.h  random_instr_stream_instruction_test.h  sub_instruction_test.h
p-isa_tools/program_mapper/p_isa/tests/pisa_kernel_tests/: add.h  add_corrected.h  add_plain.h  base_operation.h  chained_adds.h  intt.h  mod_switch.h  mul.h  mul_plain.h  multiply_constant_inplace.h  ntt.h  pisa_kernel_test.h  relin.h  rescale.h  rotate.h  square.h  wide_add.h
p-isa_tools/program_mapper/poly_program/: poly_operation_library.h  polynomial.h  polyprogram.cpp  polyprogram.h
p-isa_tools/program_mapper/poly_program/operations/: core.h  poly_description.h
p-isa_tools/program_mapper/trace_parser/: program_trace_helper.cpp  program_trace_helper.h
tracing/data-formats/: requirements.txt
tracing/data-formats/src/data_formats/: CMakeLists.txt
tracing/data-formats/src/data_formats/cpp/heracles/fhe_trace/: io.cpp
tracing/data-formats/src/data_formats/cpp/heracles/util/: util.cpp
tracing/data-formats/src/data_formats/cpp/include/heracles/: heracles_data_formats.h
tracing/data-formats/src/data_formats/cpp/include/heracles/fhe_trace/: io.h
tracing/data-formats/src/data_formats/python/heracles/data/: io.py
tracing/data-formats/src/data_formats/python/heracles/fhe_trace/: io.py
tracing/data-formats/src/data_formats/test/: CMakeLists.txt
tracing/data-formats/src/data_formats/test/math_unittest/: unittest.h
tutorials/p-isa-tools/: README.md
(+543 files in other folders)
